fix venue images stretching on desktop

--- a/public/css/venuesSwipe.css
+++ b/public/css/venuesSwipe.css
@@ -20,9 +20,6 @@ body {
   width: 100%;
   width: calc(var(--n) * 100%);
   max-height: 100vh;
-  border-top: 5px solid black;
-  /* border-bottom: 5px solid black; */
-  /* background-color: white; */
   transform: translate(calc(var(--i, 0) / var(--n) * -100%));
   transition: transform 0.3s ease-out;
   cursor: pointer;
@@ -45,17 +42,18 @@ body {
 .venue-image-container {
   width: 100vw;
   height: 40vh;
+  padding: 2.5vh;
   overflow: hidden;
   position: relative;
-  border-bottom: 5px solid black;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 20px;
   display: flex;
+  justify-content: center;
 }
 
 .venue-image-container img {
-  width: 100%;
-  /* border-bottom: 5px solid black; */
+  height: 35vh;
+  width: auto;
+  box-shadow: 0px 0px 15px 4px rgba(0, 0, 0, 0.25);
 }
 
 .venue-info {
